fix helptext overlap

--- a/montrek/baseclasses/static/base.css
+++ b/montrek/baseclasses/static/base.css
@@ -130,3 +130,6 @@ input[readonly] {
     padding: 30px;
 }
 
+#login-form-container {
+    padding: 30px;
+}
